feat: relocate aallam:openai-kotlin for capability of some models