@@ -19,9 +19,11 @@ dependencies {
     implementation(libs.ktor.server.call.logging)
     implementation(libs.ktor.server.content.negotiation)
 
-    implementation(libs.ktor.client.okhttp)
-    implementation(libs.openai.client)
-    
+    implementation(libs.ktor.client.core)
+    implementation(libs.ktor.client.cio)
+    implementation(libs.ktor.client.logging)
+    implementation(libs.ktor.client.content.negotiation)
+
     implementation(libs.ktor.serialization.kotlinx.json)
     implementation(libs.kotlinx.serialization.json)
     
@@ -43,7 +45,6 @@ graalvmNative {
         named("main") {
             imageName.set("Proxy")
             mainClass.set("io.github.stream29.proxy.MainKt")
-            buildArgs("--enable-native-access=ALL-UNNAMED")
         }
     }
 }
